# platform.external.libjpeg-turbo

./: Android.bp  BUILD.bazel  BUILD.gn  METADATA  OWNERS  README.android  WORKSPACE  jconfig.h
bazel/: ljtmacros.bzl  nasm_wrapper.bat
src/: jconfig.h  jconfigint.h
